static/index.css
:root {
  --gap: 1.5rem;
}

body {
  height: calc(100vh - var(--gap) * 2);
  margin: 0;
  padding: var(--gap);
  overflow: hidden;
  display: flex;
  gap: var(--gap);
  font-family: monospace;
}

#sidebar {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#sidebar-buttons {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.sidebar-button {
  padding: 0.5rem 0.625rem;
  border: 1px solid lightgray;
  border-radius: 0.625rem;
  background: white;
}

#chat {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  gap: var(--gap);
}

#sidebar, #chat {
  background: #f4f4f4;
  border-radius: 1rem;
  padding: 1.5rem;
}

#messages {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
  width: 50%;
  overflow-y: scroll;
}

.message {
  display: flex;
}

.message:nth-child(odd) {
  justify-content: flex-end;
}

.message-bubble {
  max-width: 69%;
  padding: 0.5rem 0.75rem;
  border: 1px solid lightgray;
  border-radius: 0.75rem;
  background: white;
}

#form {
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

#prompt {
  max-height: 128px;
  flex: 1;
  margin: 0 0.75rem 0 0;
  padding: 0;
  resize: none;
  border: none;
  outline: none;
}

#prompt-and-submit {
  flex: 1;
  display: flex;
  align-items: center;
  padding: 0.625rem 0.75rem;
  border-radius: 0.75rem;
}

#provider {
  padding: 0.5rem 0.625rem;
  border-radius: 0.625rem;
}

#prompt-and-submit, #provider {
  border: 1px solid lightgray;
  background: white;
}

@media screen and (max-width: 720px) {
  :root {
    --gap: 1rem;
  }

  #messages, #form {
    width: 100%;
  }
}

